# blend-mesh-deformer

./: CMakeLists.txt  README.md
maya/: demo.mb
modules/: FindMaya.cmake
src/: CMakeLists.txt  blendMeshDeformer.cpp  blendMeshDeformer.h  pluginMain.cpp
